// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando <GifReactApp /> component Debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GifReactApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Probando <GifReactApp /> component debe de mostrar una lista de gategorias 1`] = `
<Fragment>
  <h2>
    GifReactApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="cats"
      key="cats"
    />
    <GifGrid
      category="cookies"
      key="cookies"
    />
  </ol>
</Fragment>
`;
